# Kaito

./: .gitignore  Cargo.toml  LICENSE  config.example.toml  shell.nix
lua/: bot.lua  init.lua  sandbox.lua
lua/bot/: utils.lua
lua/bot/commands/: gpt.lua  help.lua  markov.lua  music.lua  restartlua.lua  restrict.lua  setrole.lua  settings.lua  tag.lua  undo.lua  vote.lua
lua/bot/commands/admin/: restrict.lua  setrole.lua  settings.lua
lua/bot/commands/fun/: gpt.lua  markov.lua  tag.lua  vote.lua
lua/bot/commands/utils/: help.lua  restartlua.lua  undo.lua
lua/bot/modules/: replies.lua  sed.lua  thanks.lua  voice.lua  votes.lua
lua/lib/: async.lua  fenv.lua  hooks.lua  lru.lua  pagination.lua  ring_buffer.lua  string.lua  table.lua  tags.lua  time.lua
lua/sandbox/: env.lua  utils.lua
migrations/: 202001101236_add_restrictions.sql  202101091510_add_roles_and_settings.sql  202101091510_add_settings.sql  202103032021_add_users.sql  202103032124_add_restrictions.sql  202103042041_add_servers_and_tags.sql
src/: bot.rs  config.rs  main.rs  message.rs  modules.rs  services.rs  settings.rs  utils.rs
src/bot/: db.rs
src/modules/: lua.rs  shell.rs  utils.rs
src/modules/lua/: http.rs  lib.rs  state.rs  trust.rs  utils.rs
src/modules/lua/lib/: async.rs  bot.rs  image.rs  os.rs  tags.rs  voice.rs
src/services/: discord.rs
src/services/discord/: channel.rs  message.rs  server.rs  user.rs  voice.rs
src/utils/: shell_parser.rs
