[package]
name = "kaito"
version = "0.1.0"
authors = ["Mats A. <mats@mats.sh>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
arc-swap = "1.5"
async-mutex = "1.4"
async-trait = "0.1"
bitflags = "1.3"
chrono = "0.4"
crossbeam = "0.8"
emojis = "0.4"
futures = "0.3"
glob = "0.3"
graphicsmagick = { git = "https://github.com/m4tsa/graphicsmagick-rs.git" }
governor = "0.4"
hyper = { version = "0.14", features = [ "stream", "client", "http1" ] }
hyper-tls = "0.5"
lazy_static = "1.4"
lru = "0.7"
mlua = { version = "0.7.4", features = [ "lua54", "send", "serialize" ] }
once_cell = "1.10"
paste = "1.0"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "fs", "signal", "time"] }
rand = "0.8"
regex = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serenity = { version = "0.11", default-features = false, features = ["client", "cache", "gateway", "native_tls_backend", "model"] }
songbird = { git = "https://github.com/ChurchOfMiku/songbird.git", branch = "current", default-features = false, features = ["serenity-native", "driver", "gateway"] }
thiserror = "1.0"
toml = "0.5"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-native-tls"] }
url = "2.2"
