[package]
name = "kaito"
version = "0.1.0"
authors = ["Mats <mats@mats.sh>"]
edition = "2018"

[dependencies]
anyhow = "1"
arc-swap = "1"
async-mutex = "1"
async-trait = "0.1"
bitflags = "1"
chrono = "0"
crossbeam = "0"
emojis = "0"
futures = "0.3"
glob = "0.3"
graphicsmagick = { git = "https://github.com/Myaats/graphicsmagick-rs.git" }
governor = "0.4"
hyper = { version = "0.14", features = [ "stream", "client", "http1" ] }
hyper-tls = "0.5"
lazy_static = "1.4"
lru = "0.7"
mlua = { version = "0.8", features = [ "lua54", "send", "serialize" ] }
once_cell = "1"
paste = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal", "time", "process"] }
rand = "0.8"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
serenity = { version = "0.11", default-features = false, features = ["client", "cache", "gateway", "native_tls_backend", "model"] }
thiserror = "1"
toml = "0.5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
url = "2"
